pkg/lang/testdata/ub/types/invalid/library-config-object.ub
library-config({ path: 'github.com/acme/aws' })
